Bug 1228497 - initialize 3 members in class. r=christophkerschbaumer